# iis-vaja

./: .cache.sqlite  .gitignore  Dockerfile  README.md  data.dvc  dvc.yaml  merged_data_suite.json  pyproject.toml
.dvc/: config
common/: common.py
gx/: great_expectations.yml  validate_data.py
reports/: metrics.txt  model=DVORANA_TABOR-metrics.txt  model=DVORANA_TABOR-train_metrics.txt  model=EUROPARK_-_POBREŠKA_C-metrics.txt  model=EUROPARK_-_POBREŠKA_C-train_metrics.txt  model=GORKEGA_UL_-_OŠ_FRANCETA_PREŠERNA-metrics.txt  model=GORKEGA_UL_-_OŠ_FRANCETA_PREŠERNA-train_metrics.txt  model=GOSPOSVETSKA_C_-_III_GIMNAZIJA-metrics.txt  model=GOSPOSVETSKA_C_-_III_GIMNAZIJA-train_metrics.txt  model=GOSPOSVETSKA_C_-_TURNERJEVA_UL-metrics.txt  model=GOSPOSVETSKA_C_-_TURNERJEVA_UL-train_metrics.txt  model=GOSPOSVETSKA_C_-_VRBANSKA_C-metrics.txt  model=GOSPOSVETSKA_C_-_VRBANSKA_C-train_metrics.txt  model=JHMB_–_DVOETAŽNI_MOST-metrics.txt  model=JHMB_–_DVOETAŽNI_MOST-train_metrics.txt  model=KOROŠKA_C_-_KOROŠKI_VETER-metrics.txt  model=KOROŠKA_C_-_KOROŠKI_VETER-train_metrics.txt  model=LIDL_-_KOROŠKA_C-metrics.txt  model=LIDL_-_KOROŠKA_C-train_metrics.txt  model=LIDL_-_TITOVA_C-metrics.txt  model=LIDL_-_TITOVA_C-train_metrics.txt  model=LJUBLJANSKA_UL_-_FOCHEVA-metrics.txt  model=LJUBLJANSKA_UL_-_FOCHEVA-train_metrics.txt  model=LJUBLJANSKA_UL_-_II_GIMNAZIJA-metrics.txt  model=LJUBLJANSKA_UL_-_II_GIMNAZIJA-train_metrics.txt  model=MLADINSKA_UL_-_TRUBARJEVA_UL-metrics.txt  model=MLADINSKA_UL_-_TRUBARJEVA_UL-train_metrics.txt  model=MLINSKA_UL__-_AVTOBUSNA_POSTAJA-metrics.txt  model=MLINSKA_UL__-_AVTOBUSNA_POSTAJA-train_metrics.txt  model=NA_POLJANAH_-_HEROJA_ŠERCERJA-metrics.txt  model=NA_POLJANAH_-_HEROJA_ŠERCERJA-train_metrics.txt  model=NICEHASH_-_C_PROLETARSKIH_BRIGAD-metrics.txt  model=NICEHASH_-_C_PROLETARSKIH_BRIGAD-train_metrics.txt  model=NKBM_-_TRG_LEONA_ŠTUKLJA-metrics.txt  model=NKBM_-_TRG_LEONA_ŠTUKLJA-train_metrics.txt  model=PARTIZANSKA_C_-_CANKARJEVA_UL-metrics.txt  model=PARTIZANSKA_C_-_CANKARJEVA_UL-train_metrics.txt  model=PARTIZANSKA_C_-_TIC-metrics.txt  model=PARTIZANSKA_C_-_TIC-train_metrics.txt  model=PARTIZANSKA_C_-_ŽELEZNIŠKA_POSTAJA-metrics.txt  (+20 more)
tests/: test_fetch_data.py  test_mbajk_api_endpoint.py  test_open_meteo_api_endpoint.py
(+156 files in other folders)
