[tool.poetry]
name = "vaja-1"
version = "0.1.0"
description = ""
authors = ["kristjansuligoj <kristjan.suligoj@aspiria.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.31.0"
pytest = "^8.1.1"
flask = "^3.0.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
joblib = "^1.3.2"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.16.1"

[tool.poetry.scripts]
api = "src.serve.api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
