[tool.poetry]
name = "vaja-1"
version = "0.1.0"
description = ""
authors = ["kristjansuligoj <kristjan.suligoj@aspiria.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
pytest = "^8.1.1"
flask = "^3.0.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
joblib = "^1.3.2"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.16.1"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.0"
retry-requests = "^2.0.0"
keras = "^3.2.1"
matplotlib = "^3.8.4"
great-expectations="^0.18.13"
evidently = "^0.4.19"
litestar="^2.8.2"
dagshub="^0.3.25"
mlflow="^2.12.1"
python-dotenv="^1.0.1"
flask-cors="^4.0.0"
pymongo= { version = "^3.12", extras=["srv"] }
tf2onnx="^1.16.1"
onnxruntime="^1.17.3"

[tool.poetry.scripts]
api = "src.serve.api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
